2007-05-01  Mike Kestner <mkestner@novell.com> 

	* libsteticui/WidgetFactory.cs:
	* libsteticui/ProjectView.cs:
	* libsteticui/PaletteBackend.cs:
	* libsteticui/SignalsEditor.cs:
	* libsteticui/ActionGroupToolbar.cs:
	* libsteticui/WidgetDesigner.cs:
	* libsteticui/PluggableWidget.cs:
	* stetic/DesignerView.cs: Call base.Dispose on GLib.Objects after
	all other dispose actions are performed.

2007-04-27  Mike Kestner <mkestner@novell.com> 

	* libstetic/editor/ActionToolbar.cs (FillMenu):  can't Destroy
	after Disposing the widgets. Just Destroy, as it disposes.

2007-04-27  Mike Kestner <mkestner@novell.com> 

	* libsteticui/ObjectWrapper.cs:  ContainerChildHashItem.Equals needs
	to return avoid cast and return false if comparing to another type.

2007-04-26  Mike Kestner <mkestner@novell.com> 

	* libsteticui/PaletteBackend.cs:  ActionGroupBox.Dispose needs to 
	do its cleanup before invoking base.Dispose.
 
2007-04-18  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libstetic/libstetic.mdp: Updated.
	* libstetic/wrapper/Box.cs, libstetic/wrapper/Table.cs: Set spacing to
	  6 by default.
	* libstetic/wrapper/ScrolledWindow.cs: Set scrolling to automatic by
	  default.
	* libstetic/WidgetUtils.cs, libstetic/ClassDescriptor.cs,
	  libstetic/TypedClassDescriptor.cs: When looking for default values,
	  avoid initializing the test instance, make sure the get an instance
	  with all default values.

2007-04-10  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Performance improvements in the
	  method that resolves widget types.
	* libstetic/wrapper/ButtonBox.cs: Don't automatically bind dialog
	  buttons with response type set to None.
	* libstetic/PropertyDescriptor.cs: Set the hasDefault flag when a
	  default is explicitely set in the objects.xml file.
	* libstetic/Makefile.am: Updated.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs: Don't allow cutting/copying top